# tanatloc-worker

./: .cppcheck-suppress  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  TODO  build.sh  converters.build.Dockerfile  format.sh  freefem.build.Dockerfile  gmsh.build.Dockerfile  gmsh.test.Dockerfile  local.sonarcloud.sh  opencascade.build.Dockerfile  pre.Dockerfile  release.Dockerfile  vtk.build.Dockerfile
.github/: dependabot.yml  renovate.json
.github/workflows/: ccpp.yml  cppcheck.yml  gmsh.yml  gmsh.yml.disabled  sonarcloud.yml
converters/: BRepToThreeJS.cpp  CMakeLists.txt  DXFConverter.cpp  DXFConverter.hpp  DXFToBRep.cpp  GmshToThreeJS.cpp  StepToThreeJS.cpp  StepUnion.cpp  test.step
converters/gmsh/: Gmsh.cpp  Gmsh.hpp  Tetrahedron.cpp  Triangle.cpp  Triangle.hpp  Vertex.cpp
converters/occ/: StepReader.cpp  StepReader.hpp  StepWriter.cpp  StepWriter.hpp  Triangulation.cpp  Triangulation.hpp  Union.cpp  Union.hpp  getElements.hpp
converters/src/: BRepToThreeJS.cpp  DXFConverter.cpp  DXFConverter.hpp  DXFToBRep.cpp  DXFToGLTF.cpp  GmshToGLTF.cpp  GmshToThreeJS.cpp  StepToGLTF.cpp  StepToThreeJS.cpp  StepUnion.cpp  VTUToGLTF.cpp  VTUToThreeJS.cpp
converters/src/dxf/: DXFConverter.cpp  DXFConverter.hpp
converters/src/geometry/: Tetrahedron.hpp
converters/src/gmsh/: Gmsh.cpp  Gmsh.hpp  Tetrahedron.cpp  Tetrahedron.hpp  Triangle.cpp  Triangle.hpp  Vertex.cpp  Vertex.hpp
converters/src/logger/: Logger.cpp  Logger.hpp
converters/src/occ/: GLTFWriter.cpp  GLTFWriter.hpp  MainDocument.cpp  MainDocument.hpp  StepReader.cpp  StepReader.hpp  StepWriter.cpp  StepWriter.hpp  Triangulation.cpp  Triangulation.hpp  Union.cpp  Union.hpp  getElements.hpp  makeCylinder.hpp  makePipe.hpp
converters/src/threeJS/: ThreeJS.cpp  ThreeJS.hpp
converters/src/utils/: utils.hpp
converters/src/vtk/: VTUReader.cpp  VTUReader.hpp
converters/test/: DXFConverter.test.cpp
converters/test/assets/: Cube.geo  Cube.gltf  Cube.msh  Result.vtu  pipe.brep
converters/test/assets/Cube/: face_1.json  face_2.json  face_3.json  face_4.json  face_5.json  face_6.json  part.json  solid_1.json
converters/test/gmsh/: Gmsh.test.cpp  Tetrahedron.test.cpp  Triangle.test.cpp  Vertex.test.cpp
converters/test/logger/: Logger.test.cpp
converters/test/occ/: GLTFWriter.test.cpp  StepReader.test.cpp  StepWriter.test.cpp  Triangulation.test.cpp  Union.test.cpp  getElements.test.cpp
converters/test/threeJS/: ThreeJS.test.cpp
converters/test/vtk/: VTUReader.test.cpp
converters/threeJS/: ThreeJS.cpp  ThreeJS.hpp
hooks/: post_checkout  pre_build
